# Bitfit-meteorite

./: .gitignore  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  RESEARCH_API.md
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/guidelines/: aesthetic.md
backend/: .env.example  README.md  USER_GUIDE.md  pyproject.toml
backend/app/: ai_schemas.py  auth.py  daily_check.py  db.py  google_health_client.py  llm_client.py  main.py  migrations.py  models.py  raw_signal_import.py  research.py  session.py  summarize.py  sync.py  takeout_import.py
backend/app/routes/: auth.py  chat.py  dashboard.py  import_takeout.py  research.py  session.py  sync.py  workspace.py
backend/scripts/: generate_key.py
backend/tests/: test_ai_protocol.py  test_chat.py  test_daily_check.py  test_dashboard.py  test_dashboard_raw.py  test_import_takeout_route.py  test_raw_signal_import.py  test_session_security.py  test_summarize.py  test_sync.py  test_takeout_import.py  test_workspace.py
backend/tests/fixtures/takeout_sample/: Profile.json  active_zone_minutes-2024-03-15.json  heart_rate-2024-03-15.json  heart_rate_variability-2024-03-15.json  resting_heart_rate-2024-03-15.json  resting_heart_rate-2024-03-16.json  sleep-2024-03-15.json  sleep-2024-03-16.json  spo2-2024-03-15.json  steps-2024-03-15.json  steps-2024-03-16.json  weight-2024-03-15.json
docs/: CHANGES.md
frontend/: .env.local.example  README.md  package-lock.json  package.json
frontend/app/: FloatingUtilityDock.tsx  LogoutButton.tsx  SessionGate.tsx  globals.css  layout.tsx  page.tsx  workspaceActions.ts
(+26 files in other folders)
