[project]
name = "bitfit-meteorite-backend"
version = "0.1.0"
description = "Personal health assistant backend (FastAPI + SQLModel + Claude)"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "python-dotenv",
    "python-multipart",
    "cryptography",
    "apscheduler",
    "anthropic",
    "httpx",
    "authlib",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
